# cv

./: .gitignore  Makefile  bib_to_html.py  cv.tex  publications.bib  publications.html  pyproject.toml
.github/workflows/: ci_compile_latex.yml  compile_deploy_html.yml  compile_deploy_latex.yml
container/: apptainer.def
