[tool.poetry]
authors = ["Romain <romain.caneill@yahoo.fr>"]
name = "cv"
version = "0.1.0"
description = ""

[tool.poetry.dependencies]
python = "^3.10"
pybtex = "^0.24.0"
pybtex-apa7-style = "^0.1.3"

[tool.poetry.group.dev.dependencies]
black = "22.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
